--- a/header.tex
+++ b/header.tex
@@ -148,6 +148,7 @@
 \newcommand{\store}{\mytt{store}}
 \newcommand{\RAUW}{\mytt{replace\_all}}
 \newcommand{\RAUWfull}{\mytt{replace\_all}$(O, N)$}
+\newcommand{\gdb}{\mytt{gdb}}
 
 %debugging
 \newcommand{\speccpu}{{\tt SPEC CPU2006}}
