--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1541,6 +1541,23 @@
   address = {New York, NY, USA}
 }
 
+@inproceedings{Zellweger83,
+  author = {Zellweger, Polle T.},
+  title = {{An Interactive High-level Debugger for Control-flow Optimized Programs}},
+  booktitle = {Proceedings of the Symposium on High-level Debugging},
+  series = {SIGSOFT '83},
+  year = {1983},
+  isbn = {0-89791-111-3},
+  location = {Pacific Grove, California},
+  pages = {159--172},
+  numpages = {14},
+  url = {http://doi.acm.org/10.1145/1006147.1006183},
+  doi = {10.1145/1006147.1006183},
+  acmid = {1006183},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
 
 
 %% MISC (URLs)
