--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1558,7 +1558,42 @@
   address = {New York, NY, USA}
 }
 
+@inproceedings{Barr14,
+  author = {Barr, Earl T. and Marron, Mark},
+  title = {{{TARDIS}: Affordable Time-travel Debugging in Managed Runtimes}},
+  booktitle = {Proceedings of the 2014 ACM International Conference on Object Oriented Programming Systems Languages \& Applications},
+  series = {OOPSLA '14},
+  year = {2014},
+  isbn = {978-1-4503-2585-1},
+  location = {Portland, Oregon, USA},
+  pages = {67--82},
+  numpages = {16},
+  url = {http://doi.acm.org/10.1145/2660193.2660209},
+  doi = {10.1145/2660193.2660209},
+  acmid = {2660209},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {managed runtimes, time-traveling debugger}
+}
 
+@article{Copperman93,
+  author = {Copperman, Max and McDowell, Charles E.},
+  title = {{A Further Note on Hennessy's \&Ldquo;Symbolic Debugging of Optimized Code\&Rdquo;}},
+  journal = {ACM Transactions Programming Languages and Systems},
+  issue_date = {April 1993},
+  volume = {15},
+  number = {2},
+  month = apr,
+  year = {1993},
+  issn = {0164-0925},
+  pages = {357--365},
+  numpages = {9},
+  url = {http://doi.acm.org/10.1145/169701.214526},
+  doi = {10.1145/169701.214526},
+  acmid = {214526},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
 
 %% MISC (URLs)
 @misc{perf,
