--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1595,6 +1595,206 @@
   address = {New York, NY, USA}
 }
 
+@inproceedings{Paleczny01,
+  author = {Paleczny, Michael and Vick, Christopher and Click, Cliff},
+  title = {{The {Java} {HotSpot\texttrademark} Server Compiler}},
+  booktitle = {Proceedings of the 2001 Symposium on JavaTM Virtual Machine Research and Technology Symposium - Volume 1},
+  series = {JVM'01},
+  year = {2001},
+  location = {Monterey, California},
+  url = {http://dl.acm.org/citation.cfm?id=1267847.1267848},
+  acmid = {1267848},
+  publisher = {USENIX Association},
+  address = {Berkeley, CA, USA}
+}
+
+@inproceedings{Fink03,
+  title = {{Design, Implementation and Evaluation of Adaptive Recompilation with On-Stack Replacement}},
+  author = {Fink, Stephen J and Qian, Feng},
+  booktitle = {Proceedings of the International Symposium on Code Generation and Optimization: Feedback-directed and Runtime Optimization},
+  series = {CGO '03},
+  year = {2003},
+  pages = {241--252},
+  organization = {IEEE Computer Society},
+  url = {http://dl.acm.org/citation.cfm?id=776288}
+}
+
+@inproceedings{Soman06,
+  title = {{Efficient and General On-Stack Replacement for Aggressive Program Specialization.}},
+  author = {Soman, Sunil and Krintz, Chandra},
+  booktitle = {Proceedings of the 2006 International Conference on Programming Languages and Compilers},
+  series = {PLC'06},
+  location = {Las Vegas, Nevada, USA},
+  booktitle = {Software Engineering Research and Practice},
+  pages = {925--932},
+  year = {2006},
+  url = {http://cs.ucsb.edu/~ckrintz/papers/osr.pdf},
+}
+
+
+@inproceedings{Duboscq14,
+  author = {Duboscq, Gilles and W\"{u}rthinger, Thomas and M\"{o}ssenb\"{o}ck, Hanspeter},
+  title = {{Speculation Without Regret: Reducing Deoptimization Meta-data in the Graal Compiler}},
+  booktitle = {Proceedings of the 2014 International Conference on Principles and Practices of Programming on the Java Platform: Virtual Machines, Languages, and Tools},
+  series = {PPPJ '14},
+  year = {2014},
+  isbn = {978-1-4503-2926-2},
+  location = {Cracow, Poland},
+  pages = {187--193},
+  numpages = {7},
+  url = {http://doi.acm.org/10.1145/2647508.2647521},
+  doi = {10.1145/2647508.2647521},
+  acmid = {2647521},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {Java virtual machine, just-in-time compilation, metadata, speculative optimization}
+}
+
+@inproceedings{Wurthinger13,
+  author = {W\"{u}rthinger, Thomas and Wimmer, Christian and W\"{o}\ss, Andreas and Stadler, Lukas and Duboscq, Gilles and Humer, Christian and Richards, Gregor and Simon, Doug and Wolczko, Mario},
+  title = {{One VM to Rule Them All}},
+  booktitle = {Proceedings of the 2013 ACM International Symposium on New Ideas, New Paradigms, and Reflections on Programming \& Software},
+  series = {Onward! 2013},
+  year = {2013},
+  isbn = {978-1-4503-2472-4},
+  location = {Indianapolis, Indiana, USA},
+  pages = {187--204},
+  numpages = {18},
+  url = {http://doi.acm.org/10.1145/2509578.2509581},
+  doi = {10.1145/2509578.2509581},
+  acmid = {2509581},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {dynamic languages, java, javascript, language implementation, optimization, virtual machine}
+}
+
+
+@inproceedings{Duboscq13,
+  author = {Duboscq, Gilles and W\"{u}rthinger, Thomas and Stadler, Lukas and Wimmer, Christian and Simon, Doug and M\"{o}ssenb\"{o}ck, Hanspeter},
+  title = {{An Intermediate Representation for Speculative Optimizations in a Dynamic Compiler}},
+  booktitle = {Proceedings of the 7th ACM Workshop on Virtual Machines and Intermediate Languages},
+  series = {VMIL '13},
+  year = {2013},
+  isbn = {978-1-4503-2601-8},
+  location = {Indianapolis, Indiana, USA},
+  pages = {1--10},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/2542142.2542143},
+  doi = {10.1145/2542142.2542143},
+  acmid = {2542143},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {intermediate representation, java virtual machine, just-in-time compilation, speculative optimization}
+}
+
+@inproceedings{Susskraut09,
+  author = {S{\"u}sskraut, Martin and Weigert, Stefan and Schiffel, Ute and Knauth, Thomas and Nowack, Martin and Brum, Diogo Becker and Fetzer, Christof},
+  title = {{Speculation for Parallelizing Runtime Checks}},
+  booktitle = {Proceedings of the 11th International Symposium on Stabilization, Safety, and Security of Distributed Systems},
+  series = {SSS '09},
+  year = {2009},
+  isbn = {978-3-642-05117-3},
+  location = {Lyon, France},
+  pages = {698--710},
+  numpages = {13},
+  url = {http://dx.doi.org/10.1007/978-3-642-05118-0_48},
+  doi = {10.1007/978-3-642-05118-0_48},
+  acmid = {1693614},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg}
+}
+
+
+@inproceedings{Susskraut10,
+  author = {S{\"u}sskraut, Martin and Knauth, Thomas and Weigert, Stefan and Schiffel, Ute and Meinhold, Martin and Fetzer, Christof},
+  title = {{Prospect: A Compiler Framework for Speculative Parallelization}},
+  booktitle = {Proceedings of the 8th Annual IEEE/ACM International Symposium on Code Generation and Optimization},
+  series = {CGO '10},
+  year = {2010},
+  isbn = {978-1-60558-635-9},
+  location = {Toronto, Ontario, Canada},
+  pages = {131--140},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/1772954.1772974},
+  doi = {10.1145/1772954.1772974},
+  acmid = {1772974},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {assertions, bounds checker, parallelization, speculation, stack translation}
+}
+
+@inproceedings{Bebenita10,
+  author = {Bebenita, Michael and Brandner, Florian and Fahndrich, Manuel and Logozzo, Francesco and Schulte, Wolfram and Tillmann, Nikolai and Venter, Herman},
+  title = {{{SPUR}: A Trace-based JIT Compiler for CIL}},
+  booktitle = {Proceedings of the ACM International Conference on Object Oriented Programming Systems Languages and Applications},
+  series = {OOPSLA '10},
+  year = {2010},
+  isbn = {978-1-4503-0203-6},
+  location = {Reno/Tahoe, Nevada, USA},
+  pages = {708--725},
+  numpages = {18},
+  url = {http://doi.acm.org/10.1145/1869459.1869517},
+  doi = {10.1145/1869459.1869517},
+  acmid = {1869517},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {cil, dynamic compilation, javascript, just-in-time, tracing}
+}
+
+@inproceedings{Schneider12,
+  author = {Schneider, David and Bolz, Carl Friedrich},
+  title = {{The Efficient Handling of Guards in the Design of RPython's Tracing JIT}},
+  booktitle = {Proceedings of the Sixth ACM Workshop on Virtual Machines and Intermediate Languages},
+  series = {VMIL '12},
+  year = {2012},
+  isbn = {978-1-4503-1633-0},
+  location = {Tucson, Arizona, USA},
+  pages = {3--12},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/2414740.2414743},
+  doi = {10.1145/2414740.2414743},
+  acmid = {2414743},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {deoptimization, guards, tracing jit}
+}
+
+@inproceedings{Makris09,
+  author = {Makris, Kristis and Bazzi, Rida A.},
+  title = {{Immediate Multi-threaded Dynamic Software Updates Using Stack Reconstruction}},
+  booktitle = {Proceedings of the 2009 Conference on USENIX Annual Technical Conference},
+  series = {USENIX'09},
+  year = {2009},
+  location = {San Diego, California},
+  pages = {31--44},
+  numpages = {14},
+  url = {http://dl.acm.org/citation.cfm?id=1855807.1855838},
+  acmid = {1855838},
+  publisher = {USENIX Association},
+  address = {Berkeley, CA, USA}
+}
+
+
+@inproceedings{Neamtiu06,
+  author = {Neamtiu, Iulian and Hicks, Michael and Stoyle, Gareth and Oriol, Manuel},
+  title = {{Practical Dynamic Software Updating for C}},
+  booktitle = {Proceedings of the 27th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  series = {PLDI '06},
+  year = {2006},
+  isbn = {1-59593-320-4},
+  location = {Ottawa, Ontario, Canada},
+  pages = {72--83},
+  numpages = {12},
+  url = {http://doi.acm.org/10.1145/1133981.1133991},
+  doi = {10.1145/1133981.1133991},
+  acmid = {1133991},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {dynamic software updating, function indirection, loop extraction, type wrapping}
+}
+
+
+
 %% MISC (URLs)
 @misc{perf,
   author = {{perf: {Linux} profiling with performance counters}},
@@ -1628,4 +1828,9 @@
   author = {H\^{e}ctor Corte},
   title = {{Simulated Annealing Optimization}},
   note = {\url{http://www.mathworks.com/matlabcentral/fileexchange/33109-simulated-annealing-optimization}. Accessed: 2016-03-26}
+}
+@misc{luajit,
+  author = {Pall, Mike},
+  title = {{LuaJIT 2.0 intellectual property disclosure and research opportunities}},
+  note = {\url{http://lua-users.org/lists/lua-l/2009-11/msg00089.html}. Accessed: 2016-01-13},
 }
