--- a/continuous-opt.tex
+++ b/continuous-opt.tex
@@ -10,4 +10,4 @@ In the second part, we make a first step towards a provably sound methodological
 \input{osr-llvm}
 \input{osr-correctness}
 
-\input{osr-related}
+%\input{osr-related}
