--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1217,6 +1217,40 @@
   address = {New York, NY, USA},
 }
 
+@inproceedings{Lerner03,
+  author = {Lerner, Sorin and Millstein, Todd and Chambers, Craig},
+  title = {{Automatically Proving the Correctness of Compiler Optimizations}},
+  booktitle = {Proceedings of the ACM SIGPLAN 2003 Conference on Programming Language Design and Implementation},
+  series = {PLDI '03},
+  year = {2003},
+  isbn = {1-58113-662-5},
+  location = {San Diego, California, USA},
+  pages = {220--231},
+  numpages = {12}, 
+  doi = {10.1145/781131.781156},
+  acmid = {781156},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {automated correctness proofs, compiler optimization}
+}
+
+@inproceedings{Lerner05,
+  author = {Lerner, Sorin and Millstein, Todd and Rice, Erika and Chambers, Craig},
+  title = {{Automated Soundness Proofs for Dataflow Analyses and Transformations via Local Rules}},
+  booktitle = {Proceedings of the 32Nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+  series = {POPL '05},
+  year = {2005},
+  isbn = {1-58113-830-X},
+  location = {Long Beach, California, USA},
+  pages = {364--377},
+  numpages = {14},
+  doi = {10.1145/1040305.1040335},
+  acmid = {1040335},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {automated correctness proofs, compiler optimization}
+}
+
 @inproceedings{Guo11,
   author = {Guo, Shu-yu and Palsberg, Jens},
   title = {{The Essence of Compiling with Traces}},
@@ -1793,7 +1827,143 @@
   keywords = {dynamic software updating, function indirection, loop extraction, type wrapping}
 }
 
+@inproceedings{Pnueli98,
+  author = {Pnueli, Amir and Siegel, Michael and Singerman, Eli},
+  title = {{Translation Validation}},
+  booktitle = {Proceedings of the 4th International Conference on Tools and Algorithms for Construction and Analysis of Systems},
+  series = {TACAS '98},
+  year = {1998},
+  isbn = {3-540-64356-7},
+  pages = {151--166},
+  numpages = {16},
+  doi = {10.1007/bfb0054170},
+  acmid = {691453},
+  publisher = {Springer-Verlag},
+  address = {London, UK, UK}
+}
 
+@inproceedings{Necula00,
+  author = {Necula, George C.},
+  title = {{Translation Validation for an Optimizing Compiler}},
+  booktitle = {Proceedings of the ACM SIGPLAN 2000 Conference on Programming Language Design and Implementation},
+  series = {PLDI '00},
+  year = {2000},
+  isbn = {1-58113-199-2},
+  location = {Vancouver, British Columbia, Canada},
+  pages = {83--94},
+  numpages = {12}, 
+  doi = {10.1145/349299.349314},
+  acmid = {349314},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@inproceedings{Coutant88,
+  author = {Coutant, D. S. and Meloy, S. and Ruscetta, M.},
+  title = {{{DOC}: A Practical Approach to Source-level Debugging of Globally Optimized Code}},
+  booktitle = {Proceedings of the ACM SIGPLAN 1988 Conference on Programming Language Design and Implementation},
+  series = {PLDI '88},
+  year = {1988},
+  isbn = {0-89791-269-1},
+  location = {Atlanta, Georgia, USA},
+  pages = {125--134},
+  numpages = {10},
+  doi = {10.1145/53990.54003},
+  acmid = {54003},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@article{Korel88,
+  author = {Korel, Bogdan and Laski, Janusz},
+  title = {{Dynamic Program Slicing}},
+  journal = {Information Processing Letters},
+  issue_date = {October 26, 1988},
+  volume = {29},
+  number = {3},
+  month = oct,
+  year = {1988},
+  issn = {0020-0190},
+  pages = {155--163},
+  numpages = {9},
+  url = {http://dx.doi.org/10.1016/0020-0190(88)90054-3},
+  doi = {10.1016/0020-0190(88)90054-3},
+  acmid = {56386},
+  publisher = {Elsevier North-Holland, Inc.},
+  address = {Amsterdam, The Netherlands, The Netherlands}
+}
+
+@inproceedings{Agrawal90,
+  author = {Agrawal, Hiralal and Horgan, Joseph R.},
+  title = {{Dynamic Program Slicing}},
+  booktitle = {Proceedings of the ACM SIGPLAN 1990 Conference on Programming Language Design and Implementation},
+  series = {PLDI '90},
+  year = {1990},
+  isbn = {0-89791-364-7},
+  location = {White Plains, New York, USA},
+  pages = {246--256},
+  numpages = {11},
+  url = {http://doi.acm.org/10.1145/93542.93576},
+  doi = {10.1145/93542.93576},
+  acmid = {93576},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@inproceedings{Tan16,
+  author = {Tan, Tian and Li, Yue and Zhang, Yifei and Xue, Jingling},
+  title = {{Program Tailoring: Slicing by Sequential Criteria}},
+  booktitle = {Proceedings of the 30th European conference on Object-Oriented Programming},  
+  series = {ECOOOP '16},
+  year = {2016}
+}
+
+@article{Weiser82,
+  author = {Weiser, Mark},
+  title = {{Programmers Use Slices when Debugging}},
+  journal = {Communications of the ACM},
+  issue_date = {July 1982},
+  volume = {25},
+  number = {7},
+  month = jul,
+  year = {1982},
+  issn = {0001-0782},
+  pages = {446--452},
+  numpages = {7},
+  url = {http://doi.acm.org/10.1145/358557.358577},
+  doi = {10.1145/358557.358577},
+  acmid = {358577},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {program decomposition, slice}
+}
+
+@article{Weiser84, 
+  author = {Weiser, Mark},
+  journal = {IEEE Transactions on Software Engineering}, 
+  title = {{Program Slicing}}, 
+  year = {1984}, 
+  volume = {SE-10}, 
+  number = {4}, 
+  pages = {352-357}, 
+  keywords = {Data flow analysis;debugging;human factors;parallel processing;program maintenance;program metrics;slicing;software tools}, 
+  doi = {10.1109/TSE.1984.5010248}, 
+  ISSN = {0098-5589}, 
+  month = {July}
+}
+
+@inproceedings{Bhandari15,
+  author    = {Abhilash Bhandari and V. Krishna Nandivada},
+  title     = {{Loop Tiling in the Presence of Exceptions}},
+  booktitle = {29th European Conference on Object-Oriented Programming, {ECOOP} 2015, July 5-10, 2015, Prague, Czech Republic},
+  pages     = {124--148},
+  year      = {2015},  
+  url       = {http://dx.doi.org/10.4230/LIPIcs.ECOOP.2015.124},
+  doi       = {10.4230/LIPIcs.ECOOP.2015.124},
+  timestamp = {Mon, 29 Jun 2015 15:28:15 +0200},
+  biburl    = {http://dblp2.uni-trier.de/rec/bib/conf/ecoop/BhandariN15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 %% MISC (URLs)
 @misc{perf,
