--- a/osr-correctness.tex
+++ b/osr-correctness.tex
@@ -23,6 +23,7 @@ As we observed in \mysection\ref{ss:osr-llvm-approach}, the OSR practice often m
 \input{osr-composition}
 \input{osr-multiprogram}
 
-\subsection{LLVM Implementation}
-
 \subsection{Discussion}
+\missing\
+
+\input{osr-correctness-related}
