--- a/case-study-mcvm.tex
+++ b/case-study-mcvm.tex
@@ -1,4 +1,5 @@
 \section{Optimizing Higher-Order Functions in MATLAB}
+\label{se:CS-matlab}
 
 In this section we show how \osrkit\ can be used in a production VM to implement aggressive optimizations for dynamic languages; in particular, we focus on MATLAB, a popular dynamic language for scientific and numerical programming.
 
