--- a/osr-evaluation.tex
+++ b/osr-evaluation.tex
@@ -1,4 +1,5 @@
 \section{OSRKit}
+\label{se:eval-osrkit}
 
 In this section we present a preliminar experimental study of \osrkit. In particular, we aim at addressing the following questions:
 
