--- a/osr-llvm.tex
+++ b/osr-llvm.tex
@@ -178,15 +178,13 @@ Instrumenting functions for OSR at a higher level than machine code yields sever
 %by analyzing code at an intermediate representation level.
 \end{enumerate}
 
-\noindent A natural question is whether encoding OSR at a higher level of abstraction can result in poorer performance than binary code approaches. Our solution relies on the backend's compilation pipeline to generate the most efficient native code for \fosrfrom\ and \fosrto. We provide performance numbers in Section\missing by measuring the overhead of \osrkit\ on classic benchmarks.
+\noindent A natural question is whether encoding OSR at a higher level of abstraction can result in poorer performance than binary code approaches. Our solution relies on the backend's compilation pipeline to generate the most efficient native code for \fosrfrom\ and \fosrto. We provide performance numbers in \mysection\ref{se:eval-osrkit} by measuring the overhead of \osrkit\ on classic benchmarks.
 
-To the best of our knowledge, our framework is the first to support OSR point insertion at arbitrary locations in the code. There was considerable implementation and experimentation effort to show its feasibility. In order to enable OSR at any program point, two engineering aspects are involved: manipulating the code of an optimized function to generate a continuation function -- a task that can be daunting as the SSA form must be preserved -- and providing a front-end with a clean interface to specify glue code that might be required to perform a transition. Encoding compensation code with our API is currently delegated to the front-end. In Section\missing\ we will provide an algorithm to automatically build it for a number of common compiler optimizations.
+To the best of our knowledge, our framework is the first to support OSR point insertion at arbitrary locations in the code. There was considerable implementation and experimentation effort to show its feasibility. In order to enable OSR at any program point, two engineering aspects are involved: manipulating the code of an optimized function to generate a continuation function -- a task that can be daunting as the SSA form must be preserved -- and providing a front-end with a clean interface to specify glue code that might be required to perform a transition. Encoding compensation code with our API is currently delegated to the front-end. In \mysection\ref{ss:osr-mapping} we will provide an algorithm to automatically build it for a number of common compiler optimizations.
 
 A possible scenario in which supporting OSR at arbitrary locations can be particularly useful is the implementation a flexible deoptimization mechanism in the presence of aggressive speculative optimizations. In general, it might be necessary to have a deoptimization point in the middle of a heavily optimized code fragment. Our framework provides VM builders with means to perform deoptimization without requiring a fallback to an interpreter. Also, by supporting both open and resolved OSR points we allow them to explore the trade-off between the latency from creating continuation functions on-the-fly and the code bloat from doing it ahead-of-time.
 
-\missing
-
-\mynote{Deferred compilation, case study}
+In the case study presented \mysection\ref{se:CS-matlab} we explore the end-to-end utility of \osrkit\ to tackle performance problems deriving from the use of a higher-order construct in the MATLAB language. The ability of \osrkit\ to insert OSR points at arbitrary locations allows us to capture uses of this construct and to trigger an OSR transition to a much more type-specialized version of the code.
 
 %In general, control flow might leave a function in the middle of a heavily optimized fragment (e.g., a loop body), execute a glue code to adjust the state when needed, and continue in a different, safe version of the same function. We remark that our framework is optimization-agnostic, and supporting both open and resolved OSR points provides VM builders with different trade-offs between code bloat and latency from JIT compilation.
 %\mynote{VMs do it already, so... we should rephrase this paragraph!}
@@ -198,7 +196,7 @@ A possible scenario in which supporting OSR at arbitrary locations can be partic
 \subsection{Comparison with Related Work}
 \label{ss:osr-llvm-related}
 
-\paragraph*{Early Approaches.} OSR has been pioneered in the SELF programming language implementations~\cite{Holzle92} to enable source-level debugging of optimized code, which requires deoptimizing the code back to the original version. To reconstruct the source-level state, the compiler generates {\em scope descriptors} recording locations or values of arguments and locals. Execution can be interrupted only at certain interrupt points where its state is guaranteed to be consistent (i.e., method prologues and backward branches in loops), allowing optimizations between interrupt points. SELF also implements a deferred compilation mechanism~\cite{Chambers91} for branches that are unlikely to occur at run-time: the system generates a stub that invokes the compiler to generate a code object that can reuse the stack frame of the original code. Open OSR points proposed in this thesis can be used to implement deferred compilation in a similar manner.
+\paragraph*{Early Approaches.} OSR has been pioneered in the SELF programming language implementations~\cite{Holzle92} to enable source-level debugging of optimized code, which requires deoptimizing the code back to the original version. To reconstruct the source-level state, the compiler generates {\em scope descriptors} recording locations or values of arguments and locals. Execution can be interrupted only at certain interrupt points where its state is guaranteed to be consistent (i.e., method prologues and backward branches in loops), allowing optimizations between interrupt points. SELF also implements a deferred compilation mechanism~\cite{Chambers91} for branches that are unlikely to occur at run-time: the system generates a stub that invokes the compiler to generate a code object that can reuse the stack frame of the original code. Open OSR points proposed in this thesis can be used to implement deferred compilation at any basic block in a similar manner.
 
 \paragraph*{Java Virtual Machines.} The success of the Java language has drawn more attention to the design and implementation of OSR techniques, as bytecode interpreters began to work along with JIT compilers. In the high-performance HotSpot Server JVM~\cite{Paleczny01} performance-critical methods are identified using method-entry and backward-branches counters; when the OSR threshold is reached, the runtime transfers the execution from the interpreter frame to an OSR frame and thus to compiled code. Deoptimization is performed when class loading invalidates inlining or other optimization decisions: execution is rolled forward to a safe point, at which the native frame is converted into an interpreter frame.
 
